# jamesbmadden.github.io

./: .gitignore  404.html  index.html  package-lock.json  package.json  snowpack.config.js
_snowpack/pkg/: import-map.json  lit.js  marked.js
article/: Homework_Manager.html  James_Madden_Website.html  WorldXPlore.html  homework_manager.html  james_madden_website.html  worldxplore.html
rust/: Cargo.toml  package.json
rust/src/: main.rs  plasma.rs  render.rs  shader.wgsl
src/: jbm-root.css.js  jm-root.css.js  script.js
src/background/: background.js  jm-background.js  shader.frag.js  shader.vert.js
src/components/: jbm-link.js  md-render.js
src/components/image-card/: image-card.css.js  image-card.js
src/components/jbm-article/: jbm-article.css.js  jbm-article.js
src/data/: projects.js
src/data/posts/: homework_manager.md.proxy.js  james_madden_site.md  james_madden_site.md.proxy.js  worldxplore.md  worldxplore.md.proxy.js
ssr/: boilerplate.js  render.js  routes.js
ssr/routes/: 404.js  article.js  index.js
web/: index.html
web/src/: jbm-root.css  jm-root.css  script.js
web/src/background/: background.js  shader.frag  shader.vert
web/src/components/: jbm-link.js  md-render.js
web/src/components/image-card/: image-card.css  image-card.js
web/src/components/jbm-article/: jbm-article.css  jbm-article.js
web/src/data/: projects.js
web/src/data/posts/: james_madden_site.md
